--- a/index.html
+++ b/index.html
@@ -76,11 +76,13 @@
                 <div style='border-bottom: solid rgba(0, 0, 0, 0.1); '>
                    <h3>(디지털컨버전스)JAVA기반 웹 융합 응용SW 개발</h3>
                 	<span style='margin-right: 5%; color:green;'>2021.01 ~ 2021.07 </span><span style="font-weight: bold;">영남인재교육원</span>
-                	<p style="font-size: 25px; margin-top: 15px;">6개월간 영남인재교육원 에서 시행하는 JAVA과정을 수료했습니다.<br>
-                		기본적으로 MySQL, Spring, MyBatis, JavaScript, HTML/CSS 통하여 웹 개발의 필요한 도구들을 배웠습니다.<br>
-               			객체 지향적인 사고를 향상 시키기 위해 JavaSwing을 통한 도서관리 프로젝트를 하엿으며, <br>
-               			웹 프로젝트의 이해도를 높이기 위해서 팀과의 쇼핑몰 프로젝트를 하였습니다.
-               			팀 프로젝트를 통해 다른 사람과의 소통이 정말 중요한것을 느꼇고,<br>
+                	<p style="font-size: 25px; margin-top: 15px;">6개월간 영남인재교육원 에서 시행하는 JAVA과정을 수료했습니다.
+                		기본적으로 MySQL, Spring, MyBatis, JavaScript, HTML/CSS,JQuery 통하여 웹 개발의 필요한 도구들을 배웠습니다.
+                		MyBatis를 통한 MySQL과의 연동, Ajax를 사용한 비동기 방식처리, SpirngMVC를 사용해 코드를 효율 적으로 구성 했습니다.
+                		<br>
+               			객체 지향적인 사고를 향상 시키기 위해 JavaSwing을 통한 도서관리 프로젝트를 1개월간 하엿으며 
+               			웹 프로젝트의 이해도를 높이기 위해서 팀과의 쇼핑몰 프로젝트를 2개월간 진행 하였습니다.
+               			팀 프로젝트를 통해 다른 사람과의 소통이 정말 중요한것을 느꼇으며<br>
                			어렴움을 통해 개발의 성취를 얻고자 하면 끊임없는 노력이 필요 하다는것을 깨달았습니다.               			
                 	</p>
                 </div>
